    into its own file (sqlparser.pm).
  * [Roland] [From 2.5] Bumped the sequences for task ids so that they are
    greater than 100.  If they are not, the 100th task will have a wrong
    list or reverse dependencies (since 100 is the id of "None", and all
    tasks depend on this "None" by default.  Note: there seems to be no
    more dependencies in the artifact manager.

 -- Roland Mas <lolando@debian.org>  Fri, 22 Mar 2002 14:48:15 +0100

sourceforge (2.6-0+8) unstable; urgency=low

  * [Christian] Added debian/BUGS
  * [Christian] Corrected approve_pending bug
  * [Christian] Corrected wrong userid for CVS
  * [Christian] Fixed libmcryp4 dependancy
  * [Christian] Added anoncvs_ users in ldap db
  * [Roland] [From 2.5] Added man page for sourceforge-config (from a
    Docbook SGML file).  This fixes a lintian error.
  * [Christian] Added ldap support for chrooted anonymous cvs
  * [Roland] Minor typo-fixes here and there, and a few cosmetic changes.
  * [Roland] [From 2.5] Fixed unix_box entries.
  * [Roland] Fixed leftover cruft in /etc/nsswitch.conf purging.
  * [Roland] Made the header somewhat customizable (display/hide the
    banner, mainly).
  * [Roland] Transitioned to PostgreSQL 7.2.  That was far from easy,
    since PG 7.2 is much more anal retentive than 7.1.3.  In particular,
    foreign key constraints and indices are not automagically dropped,
    which caused strange errors and deep frustration in the upgrade path
    from the 2.5 series.
  * [Roland] While I was fixing that, I also took the opportunity to add
    some code to drop the useless "deadXX" columns that are introduced by
    the 2.5->2.6 upgrade (ALTER TABLE/DROP COLUMN not being implemented in
    PostgreSQL yet).
  * [Roland] Moved a few SQL statements used only in the 2.5->2.6 upgrade
    from db-upgrade26.pl to sf2.5-to-sf2.6.sql.

 -- Christian Bayle <bayle@aist.enst.fr>  Mon, 11 Mar 2002 23:54:57 +0100

sourceforge (2.6-0+7) unstable; urgency=low
